--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,11 @@
             >Users</a
           >
         </li>
+        <li role="presentation">
+          <a routerLink="/products" routerLinkActive="active" class="nav-link"
+            >Products</a
+          >
+        </li>
       </ul>
     </div>
   </div>
