canActivateChild CanDeactivate Added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,3 +4,6 @@
 <button class="btn btn-primary" (click)="onLoadServer(1)">
   Load Servers 1
 </button>
+
+<button class="btn btn-info" (click)="onLogin()">Login</button>
+<button class="btn btn-danger" (click)="onLogout()">Logout</button>
